# coinmarket-dashboard

./: .gitignore  CHANGELOG.md  README.md  coinmarket-dashboard.cabal
app/: CoinData.hs  CoinDataSample.hs  CoinDataStorage.hs  CoinDataStorageUtils.hs  CoinDataTypes.hs  CoinDataUtils.hs  DataRefresher.hs  DataRefresherTypes.hs  Main.hs  Main2.hs  MarketDataClient.hs  MarketDataClientTypes.hs  MarketDataClientUtils.hs  Views.hs
test/CoinData/: TestCoinData.hs  TestCoinDataStorage.hs
test/integration/: TestDataRefresher.hs
test/integration/TestMarketDataClient/: TestMarketClient.hs
test/unit/: MarketDataClientUtilsTests.hs  Test.hs
