cabal-version:      2.4
name:               coinmarket-dashboard
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: CLI-based crypto coins market prices dashboard

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Yeramin (ysfdev), Andres (onehoax), Kenley (registerzero)
maintainer:         Yeramin (ysfdev), Andres (onehoax), Kenley (registerzero)

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable coinmarket-dashboard
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: 
        MarketDataClient
        MarketDataClientUtils
        MarketDataClientTypes

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends: 
        base ^>=4.14.3.0,
        http-conduit ^>=2.3.8,
        aeson ^>=1.5.5.1,
        vector
    hs-source-dirs:   app
    default-language: Haskell2010


test-suite unit-test
  type: exitcode-stdio-1.0
  main-is: Test.hs
  other-modules:
      MarketDataClientTypes
      MarketDataClientUtils
      MarketDataClientUtilsTests
  hs-source-dirs:
      app
      test/unit
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends: 
    base ^>=4.14.3.0,
    tasty,
    tasty-hunit,
    http-conduit ^>=2.3.8,
    aeson ^>=1.5.5.1,
    vector
  default-language: Haskell2010
