cabal-version:      2.4
name:               coinmarket-dashboard
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: CLI-based crypto coins market prices dashboard

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Yeramin (ysfdev), Andres (onehoax), Kenley (registerzero)
maintainer:         Yeramin (ysfdev), Andres (onehoax), Kenley (registerzero)

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

-- test-suite cmd-coindata
--     main-is:        TestCoinData.hs

executable coinmarket-dashboard
    main-is:        Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        MarketDataClient
        MarketDataClientUtils
        MarketDataClientTypes
        CoinData
        CoinDataUtils
        CoinDataTypes
        CoinDataStorage
        CoinDataSample
        CoinDataStorageUtils
        DataRefresher
        DataRefresherTypes
        Views
        TestCoinData
        TestCoinDataStorage

    -- LANGUAGE extensions used by modules in this package.
    other-extensions:
        QuasiQuotes
        TypeApplications
        OverloadedStrings

    build-depends:
         aeson ^>=2.1.0.0
        ,ansi-terminal ^>=0.11
        ,async ^>=2.2.4
        ,base ^>=4.14.3.0
        ,bytestring
        ,containers
        ,direct-sqlite ^>=2.3.27
        ,http-conduit ^>=2.3.8
        ,mtl ^>=2.2.2
        ,stm ^>=2.5.0.1
        ,template-haskell
        ,terminal-size ^>=0.3.3
        ,text
        ,vector

    hs-source-dirs:
        app
        test
        test/CoinData

    default-language: Haskell2010


test-suite unit-test
  type: exitcode-stdio-1.0
  main-is: Test.hs
  other-modules:
      MarketDataClientTypes
      MarketDataClientUtils
      MarketDataClientUtilsTests
  hs-source-dirs:
      app
      test/unit
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends: 
    base ^>=4.14.3.0,
    tasty,
    tasty-hunit,
    http-conduit ^>=2.3.8,
    aeson ^>=2.1.0.0,
    vector
  default-language: Haskell2010
